# flaglite-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/flaglite/: __init__.py  cache.py  client.py  exceptions.py  types.py
tests/: __init__.py  test_cache.py  test_client.py
